# iced-nsview

./: Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
examples/: slider.rs  tour.rs
src/: lib.rs  widget.rs
