[package]
name = "iced-nsview"
version = "0.1.0"
authors = ["Ales Tsurko <ales.tsurko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cocoa = "0.20"
core-graphics = "0.19"
iced_native = { git = "https://github.com/hecrj/iced.git" }
iced_wgpu = { git = "https://github.com/hecrj/iced.git", features = [ "canvas" ] }
objc = "0.2"
